@@ -42,20 +42,15 @@ public class TeacherServiceImpl implements ITeacherService {
             Teacher teacher = Mapper.mapToTeacher(insertDTO);
 
             // Insert is NOT idempotent (is not unchangeable)
-//            if (teacherDAO.getByVat(insertDTO.getVat()).isPresent()) {
-//                throw  new EntityAlreadyExistsException("Teacher", "Teacher with vat: " +
-//                        insertDTO.getVat() + " already exists");
-//            }
-
-            teacherDAO.getByVat(insertDTO.getVat()).orElseThrow(() ->
-                    new EntityAlreadyExistsException("Teacher", "Teacher with vat: "
-                            + insertDTO.getVat() + " already exists"));
+            if (teacherDAO.getByVat(insertDTO.getVat()).isPresent()) {
+                throw  new EntityAlreadyExistsException("Teacher", "Teacher with vat: " +
+                        insertDTO.getVat() + " already exists");
+            }
 
             TeacherReadOnlyDTO readOnlyDTO = teacherDAO.insert(teacher)
                             .map(Mapper::mapToTeacherReadOnlyDTO)
                                     .orElseThrow(() -> new EntityInvalidArgumentException("Teacher", "Teacher with vat: " +
                                             insertDTO.getVat() + " not inserted"));
-
             JPAHelper.commitTransaction();
             LOGGER.info("Teacher with id: {}, vat: {}, firstname: {}, lastname: {} inserted",
                     teacher.getId(), teacher.getVat(), teacher.getLastname(), teacher.getFirstname());
@@ -76,7 +71,6 @@ public class TeacherServiceImpl implements ITeacherService {
         try {
             JPAHelper.beginTransaction();
             Teacher teacher = Mapper.mapToTeacher(updateDTO);
-
 //            if (teacherDAO.getByVat(updateDTO.getVat()).isEmpty()) {
 //                throw new EntityNotFoundException("Teacher", "Teacher with vat: " + updateDTO.getVat() + " not found");
 //            }
@@ -84,11 +78,9 @@ public class TeacherServiceImpl implements ITeacherService {
                     + updateDTO.getVat() + " not found"));
             teacherDAO.getById(updateDTO.getId()).orElseThrow(() -> new EntityNotFoundException("Teacher", "Teacher with id: "
                     + updateDTO.getId() + " not found"));
-
             TeacherReadOnlyDTO readOnlyDTO = teacherDAO.update(teacher)
                     .map(Mapper::mapToTeacherReadOnlyDTO)
                     .orElseThrow(() -> new EntityInvalidArgumentException("Teacher", "Error during update"));
-
             JPAHelper.commitTransaction();
             LOGGER.info("Teacher with id: {}, vat: {}, lastname: {}, firstname: {} updated",
                     teacher.getId(), teacher.getVat(), teacher.getLastname(), teacher.getFirstname());
@@ -164,7 +156,7 @@ public class TeacherServiceImpl implements ITeacherService {
             List<TeacherReadOnlyDTO> readOnlyDTOS = teacherDAO.getByCriteria(criteria)
                     .stream()
                     .map(Mapper::mapToTeacherReadOnlyDTO)
-                    .toList();
+                    .collect(Collectors.toList());
             JPAHelper.commitTransaction();
             return readOnlyDTOS;
         } finally {
